--- a/package.json
+++ b/package.json
@@ -29,22 +29,25 @@
   ],
   "dependencies": {
     "@modern-js/runtime": "2.25.1",
+    "antd": "^5.6.4",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "@modern-js/plugin-tailwindcss": "2.25.1"
   },
   "devDependencies": {
+    "@modern-js-app/eslint-config": "2.25.1",
     "@modern-js/app-tools": "2.25.1",
     "@modern-js/eslint-config": "2.25.1",
     "@modern-js/tsconfig": "2.25.1",
-    "@modern-js-app/eslint-config": "2.25.1",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "rimraf": "~3.0.2",
-    "typescript": "~5.0.4",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
-    "@types/react-dom": "~18.0.10"
+    "@types/react-dom": "~18.0.10",
+    "husky": "~8.0.1",
+    "lint-staged": "~13.1.0",
+    "prettier": "~2.8.1",
+    "rimraf": "~3.0.2",
+    "typescript": "~5.0.4",
+    "tailwindcss": "~3.2.4"
   }
 }
