--- a/package.json
+++ b/package.json
@@ -28,17 +28,19 @@
     "dist/"
   ],
   "dependencies": {
+    "@modern-js/plugin-tailwindcss": "2.25.1",
     "@modern-js/runtime": "2.25.1",
     "antd": "^5.6.4",
+    "faker": "5",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0",
-    "@modern-js/plugin-tailwindcss": "2.25.1"
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
     "@modern-js-app/eslint-config": "2.25.1",
     "@modern-js/app-tools": "2.25.1",
     "@modern-js/eslint-config": "2.25.1",
     "@modern-js/tsconfig": "2.25.1",
+    "@types/faker": "5",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
@@ -47,7 +49,7 @@
     "lint-staged": "~13.1.0",
     "prettier": "~2.8.1",
     "rimraf": "~3.0.2",
-    "typescript": "~5.0.4",
-    "tailwindcss": "~3.2.4"
+    "tailwindcss": "~3.2.4",
+    "typescript": "~5.0.4"
   }
 }
